please help fix staff.html, images need to be aligned , 2perline

--- a/src/css/skeleton.css
+++ b/src/css/skeleton.css
@@ -139,7 +139,7 @@ h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
 h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
 h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
-h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; font-weight: 1500;}
+h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
 /* Larger than phablet */
 @media (min-width: 550px) {
@@ -172,10 +172,10 @@ input[type="reset"],
 input[type="button"] {
   display: inline-block;
   height: 38px;
-  padding: 60px 80px;
+  padding: 65px 80px;
   color: #555;
   text-align: center;
-  font-size: 31px;
+  font-size: 41px;
   font-weight: 600;
   line-height: 35%;
   letter-spacing: .1rem;
