--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Kanit";
   background: url(/images/process.jpeg); }
 
 .topnav {
@@ -24,3 +24,96 @@ body {
   margin-top: 12%;
   height: 33%;
   width: 100%; }
+
+.cblock {
+  background: white;
+  margin-top: 10%;
+  height: 33%;
+  width: 100%; }
+
+.title {
+  font-size: 48px;
+  margin: 0;
+  padding: 0;
+  font-weight: 100;
+  padding-bottom: 18px; }
+
+.mtext {
+  letter-spacing: 0.2px; }
+
+.ctext {
+  letter-spacing: 0.2px;
+  padding-left: 21px; }
+
+.ipanel1 {
+  padding-right: 22px;
+  border-top: 5px solid white;
+  height: 46%;
+  background-color: green; }
+
+.ipanel2 {
+  padding-right: 22px;
+  border-top: 5px solid white;
+  height: 46%;
+  background-color: purple; }
+
+.ipanel3 {
+  padding-right: 22px;
+  border-top: 5px solid white;
+  height: 46%;
+  background-color: yellow; }
+
+.ipanel4 {
+  padding-right: 22px;
+  border-top: 5px solid white;
+  height: 46%;
+  background-color: aqua; }
+
+.endpage {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 3%;
+  background-color: black;
+  color: white;
+  text-align: center; }
+
+.staffbg {
+  margin-top: 10%;
+  background: white;
+  width: 100%;
+  height: 100%; }
+
+.people-wrap {
+  margin-left: 28px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+img {
+  display: block; }
+
+.title {
+  font-weight: 500;
+  position: relative;
+  left: 14px; }
+
+.name {
+  position: relative;
+  left: 19px;
+  bottom: 23px; }
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px; }
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table; }
